[package]
name = "vtables"
version = "0.2.0"
authors = ["jan", "Andrew Buck"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/not-wlan/vtables"
homepage = "https://github.com/not-wlan/vtables"
description = "Interact with C++ virtual method tables from Rust"
readme = "README.md"

[dependencies]
